--- a/index.html
+++ b/index.html
@@ -1,15 +1,56 @@
-fetch('certificates.json')
-  .then(response => response.json())
-  .then(data => {
-    const container = document.getElementById('certificates-container');
-    container.innerHTML = data.certificates.map(cert => `
-      <div class="certificate">
-        <h2>${cert.icon || '📜'} ${cert.title}</h2>
-        <p><strong>Issued by:</strong> ${cert.issuer}</p>
-        <p class="date"><strong>Date:</strong> ${cert.date}</p>
-        <a href="${cert.file}" target="_blank" download>
-          Download Certificate
-        </a>
-      </div>
-    `).join('');
-  });
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Certificates</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .certificate {
+      border: 1px solid #ccc;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+    }
+    .certificate h2 {
+      margin: 0 0 10px;
+    }
+    .certificate .date {
+      color: gray;
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>My Certificates</h1>
+  <div id="certificates-container">Loading certificates...</div>
+
+  <script>
+    fetch('certificates.json')
+      .then(response => response.json())
+      .then(data => {
+        const container = document.getElementById('certificates-container');
+        container.innerHTML = data.certificates.map(cert => `
+          <div class="certificate">
+            <h2>${cert.icon || '📜'} ${cert.title}</h2>
+            <p><strong>Issued by:</strong> ${cert.issuer}</p>
+            <p class="date"><strong>Date:</strong> ${cert.date}</p>
+            <a href="${cert.file}" target="_blank" download>
+              Download Certificate
+            </a>
+          </div>
+        `).join('');
+      })
+      .catch(error => {
+        document.getElementById('certificates-container').innerText =
+          'Failed to load certificates.';
+        console.error('Error fetching certificates:', error);
+      });
+  </script>
+
+</body>
+</html>
